[package]
name = "grapple_db"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = ""
authors = ["grapple228 <greenapple228882@yandex.ru>"]
readme = "README.md"
repository = "https://github.com/grapple228/rust_grapple_db.git"

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[features]
default = []
scylla = ["dep:scylla", "dep:charybdis"]

[[bench]]
name = "scylla_bench"
harness = false


[dependencies]
# Async
tokio = { version = "1", features = ["full"] }

# Db
scylla = {version = "1.2.0", optional =  true }
charybdis = {version = "1.0.1", features = ["migrate"], optional =  true }

# Tracing
tracing = "0.1"
#Other
derive_more = {version = "1", features = ["from"] }
uuid = { version = "1.17", features = ["fast-rng", "serde", "v4"] }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
time = "0.3"
futures = "0.3"

[dev-dependencies]
criterion = "0.6.0"
chrono = "0.4.41"
anyhow = "1"

