[package]
name = "grapple_db"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Library with clients for different databases with lightweight interface"
authors = ["grapple228"]
readme = "README.md"
repository = "https://github.com/grapple228/rust_grapple_db.git"

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[package.metadata.docs.rs]
all-features = true

[features]
default = []
scylla = ["dep:scylla", "dep:charybdis", "dep:futures"]
redis = ["dep:deadpool-redis", "dep:redis_macros", "dep:serde_json"]

[[bench]]
name = "scylla_bench"
harness = false

[dependencies]
# Macros
redis_macros = {path = "./redis_macros", optional = true}

# Async
tokio = { version = "1", features = ["full"] }

# Db
scylla = {version = "1.2.0", optional =  true }
charybdis = {version = "1.0.1", features = ["migrate"], optional =  true }
deadpool-redis = {version = "0.21", features = [], optional = true}

# Tracing
tracing = "0.1"

# Json
serde = { version = "1", features = ["derive"] }
serde_json = {version = "1.0", optional = true}

#Other
async-trait = "0.1"
futures = {version = "0.3", optional = true}
derive_more = {version = "1", features = ["from"] }

[dev-dependencies]
criterion = "0.6.0"
chrono = "0.4.41"
anyhow = "1"

